2013-10-26  Julien Bect  <julien.bect@supelec.fr>

	Rewrite the description of example 'kb04'.

	* examples/01_kriging_basics/stk_example_kb04.m: modified

2013-10-23  Julien Bect  <julien.bect@supelec.fr>

	Rewrite the description of example 'kb03'.

	* examples/01_kriging_basics/stk_example_kb03.m: modified

2013-10-20  Julien Bect  <julien.bect@supelec.fr>

	Fix a bug in stk_predict and add a test.

	* core/stk_predict.m: modified

2013-10-16  Julien Bect  <julien.bect@supelec.fr>

	Rewrite the description of example 'kb02'.

	* examples/01_kriging_basics/stk_example_kb02.m: modified

2013-10-15  Julien Bect  <julien.bect@supelec.fr>

	Rewrite the description of example 'kb01'.

	* examples/01_kriging_basics/stk_example_kb01.m: modified

	Insert an empty line before the example header.

	* misc/text/stk_disp_examplewelcome.m: modified

2013-10-13  Julien Bect  <julien.bect@supelec.fr>

	New example script: 1D Bayesian optimization.

	* examples/02_design_of_experiments/stk_example_doe03.m: new
	script

	Display help text when running an example script.

	* misc/text/stk_disp_examplewelcome.m: modified

	Restore output verbosity at the end of example scripts.

	* examples/01_kriging_basics/stk_example_kb01.m: modified
	* examples/01_kriging_basics/stk_example_kb02.m: modified

	Use input row names for the output of stk_feval.

	* utils/stk_feval.m: modified

	Fix a bug in @stk_dataframe/subsref.

	* utils/arrays/@stk_dataframe/subsref.m: modified

2013-10-12  Julien Bect  <julien.bect@supelec.fr>

	Fix a bug in stk_dataframe.m and add a copy constructor.

	* utils/arrays/@stk_dataframe/stk_dataframe.m: modified

	Provide Gaussian and Student EI functions.

	* misc/distrib/distrib_student_ei.m: new function
	* misc/distrib/distrib_normal_ei.m: new function

2013-10-10  Julien Bect  <julien.bect@supelec.fr>

	distrib_normal_*: return NaN for negative standard deviations.

	* misc/distrib/distrib_normal_pdf.m: modified
	* misc/distrib/distrib_normal_cdf.m: modified
