@@ -122,7 +122,7 @@ zp = stk_predict (model, xi, zi, xt);
 
 %% Display results
 
-stk_plot1d (xi,zi,xt,zt,zp)
+stk_plot1d (xi, zi, xt, zt, zp)
 xlabel ('x');  ylabel ('z');
 
 model %#ok<NOPTS>
