@@ -1,6 +1,13 @@
-% Example 05 generates conditioned sample paths
-% =============================================
-%    Generate conditioned sample paths.
+% STK_EXAMPLE_KB05 show how to generate conditioned sample paths
+%
+% A Matern Gaussian process model is used, with constant but unknown mean
+% (ordinary kriging) and known covariance parameters.
+%
+% Given noiseless observations from the unknown function, a batch of conditioned
+% sample paths is drawn using the "conditioning by kriging" technique. In short,
+% this means that unconditioned sample path are simulated first (using
+% stk_generate_samplepaths), and then conditioned on the observations by kriging
+% (using stk_conditioning).
 
 % Copyright Notice
 %
@@ -29,18 +36,18 @@
 %    You should  have received a copy  of the GNU  General Public License
 %    along with STK.  If not, see <http://www.gnu.org/licenses/>.
 
-stk_disp_examplewelcome();
+stk_disp_examplewelcome
 
 
 %% Define a 1d test function
 
-f = @(x)( -(0.7*x+sin(5*x+1)+0.1*sin(10*x)) );  % define a 1D test function
-DIM = 1;                                        % dimension of the factor space
-BOX = [-1.0; 1.0];                              % factor space
+f = @(x)(- (0.7 * x + sin (5 * x + 1) + 0.1 * sin (10 * x)));
+DIM = 1;            % dimension of the factor space
+BOX = [-1.0; 1.0];  % factor space
 
-NT = 400; % nb of points in the grid
-xt = stk_sampling_regulargrid(NT, DIM, BOX);
-zt = stk_feval(f, xt);
+NT = 400;  % nb of points in the grid
+xt = stk_sampling_regulargrid (NT, DIM, BOX);
+zt = stk_feval (f, xt);
 
 
 %% Generate observations
@@ -50,10 +57,9 @@ zt = stk_feval(f, xt);
 % are chosen as a subset of xt.
 %
 
-NI = 6;                               % nb of evaluations that will be used
-xi_ind  = [1 20 90 200 300 350];      %
-xi = xt(xi_ind, 1);
-zi = stk_feval(f, xi);                % evaluation results
+xi_ind = [1 20 90 200 300 350];  % indices of evaluation points in xt
+xi = xt(xi_ind, 1);              % evaluation points
+zi = stk_feval (f, xi);          % evaluation results
 
 
 %% Specification of the model
@@ -66,31 +72,30 @@ zi = stk_feval(f, xi);                % evaluation results
 % The following line defines a model with a constant but unknown mean
 % (ordinary kriging) and a Matern covariance function. (Some default
 % parameters are also set, but we override them below.)
-model = stk_model('stk_materncov_iso');
+model = stk_model ('stk_materncov_iso');
 
 % Parameters for the Matern covariance
 % ("help stk_materncov_iso" for more information)
 SIGMA2 = 1.0;  % variance parameter
 NU     = 4.0;  % regularity parameter
 RHO1   = 0.4;  % scale (range) parameter
-model.param = log([SIGMA2; NU; 1/RHO1]);
+model.param = log ([SIGMA2; NU; 1/RHO1]);
 
 
 %% Carry out the kriging prediction and generate conditional sample paths
-%
 
 % Carry out the kriging prediction at points xt
-[zp, lambda] = stk_predict(model, xi, zi, xt);
+[zp, lambda] = stk_predict (model, xi, zi, xt);
 
 % Generate (unconditional) sample paths according to the model
 NB_PATHS = 10;
-zsim = stk_generate_samplepaths(model, xt, NB_PATHS);
+zsim = stk_generate_samplepaths (model, xt, NB_PATHS);
 
 % Condition sample paths on the observations
-zsimc = stk_conditioning(lambda, zi, zsim, xi_ind);
+zsimc = stk_conditioning (lambda, zi, zsim, xi_ind);
 
 % Display the result
-stk_plot1dsim(xi, zi, xt, zt, zp, zsimc);
+stk_plot1dsim (xi, zi, xt, zt, zp, zsimc);
 t = 'Kriging prediction and conditional sample paths';
-set(gcf, 'Name', t); title(t);
-xlabel('x'); ylabel('z');
+set (gcf, 'Name', t);  title (t);
+xlabel ('x');  ylabel ('z');
