@@ -1,8 +1,9 @@
 2013-10-26  Julien Bect  <julien.bect@supelec.fr>
 
-	Rewrite the description of example 'kb04'.
+	Rewrite the description of examples 'kb04' and 'kb05'.
 
 	* examples/01_kriging_basics/stk_example_kb04.m: modified
+	* examples/01_kriging_basics/stk_example_kb05.m: modified
 
 2013-10-23  Julien Bect  <julien.bect@supelec.fr>
 
